# tccretro

./: .env.example  .gitignore  .gitleaksignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  README.md
.claude/commands/: commit.md
.serena/: project.yml
app/: project_definitions.yaml  pyproject.toml
app/src/tccretro/: __init__.py  __main__.py  ai_feedback.py  cli.py  export.py  login.py  report_generator.py
app/src/tccretro/analyzer/: __init__.py  base.py  mode_analyzer.py  project_analyzer.py  routine_analyzer.py
app/src/tccretro/utils/: __init__.py  font_config.py
app/tests/: conftest.py  test_ai_feedback.py  test_analyzer.py  test_cli.py  test_export.py  test_login.py  test_report_generator.py  test_routine_analyzer.py
