[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tccretro"
version = "0.1.0"
description = "TaskChute Cloud Export Automation (Local)"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.35.0",
    "click>=8.3.0",
    "jinja2>=3.1.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "playwright>=1.55.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.0",
    "seaborn>=0.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tccretro"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.1",
    "types-pyyaml>=6.0.0",
]

[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

# Set line length
line-length = 100

# Target Python 3.10+
target-version = "py310"

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]

[tool.ruff.lint.isort]
known-first-party = ["tccretro"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["src/tccretro"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
